[package]
authors = ["Olger Warnier <olger@spectare.nl>"]
edition = "2021"
name = "fakeidp"
version = "1.0.3"

[dependencies]
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
actix-rt = "2.10.0"
actix-service = "2.0.2"
actix-web = "4.9.0"
actix-4-jwt-auth = "1.2.5"
#actix-4-jwt-auth = { path = "../actix-4-jwt-auth" }
actix-files = "0.6.6"
biscuit = "0.7.0"
#biscuit = { path = "../biscuit/" }
bytes = "1.10.1"
chrono = "0.4"
num = "0.4"
clap = {version = "4.5.31", features = ["derive", "unicode", "env"]}
der-parser = "10.0.0"
env_logger = "0.11.6"
futures = "0.3.31"
futures-core = {version = "0.3.31", default-features = false, features = ["alloc"]}
futures-util = {version = "0.3.31", default-features = false, features = ["alloc"]}
#num = "0.3"
tokio = {version = "1.43.0", features = ["full"]}
nanoid = "0.4.0"
pem = "3.0.5"
ring = "0.17.11"
webpki = "0.22.4"
mio = "1.0.3"
openssl = "0.10.71"
data-encoding = "2.8.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sysinfo = "0.32.1"
reqwest = {version = "0.12", features = ["json", "blocking"]}

# [profile.release]
# debug = true

# [patch.crates-io]
# actix-http = {git = "https://github.com/actix/actix-web.git"}
